# SDL3-Minimal-CMake-Project

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
